# color-rs

./: Cargo.toml  readme.md
src/: cmyk.rs  color.rs  color_space.rs  hsl.rs  hsv.rs  lib.rs  parse.rs  rgb.rs  test.rs  tests.rs  utilities.rs  utility.rs  xyz.rs
src/color_space/: cmyk.rs  hsl.rs  hsv.rs  rgb.rs  xyz.rs
