[package]
name = "color"
version = "0.2.0" # Remember to update html_root_url.
authors = ["Skylor R Schermer <skyschermer@gmail.com>"]
description = "Color library"
license = "MIT, Apache 2.0"
readme = "README.md"
keywords = ["color"]
categories = []
documentation = ""
homepage = ""
repository = "https://github.com/skysch/color-rs"
exclude = ["*.sublime-project", "*.sublime-workspace"]

[lib]
name = "color"

# The development profile, used for `cargo build`
[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1

# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = false
codegen-units = 1

# The testing profile, used for `cargo test`
[profile.test]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1

# The benchmarking profile, used for `cargo bench`
[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1

# The documentation profile, used for `cargo doc`
[profile.doc]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1

