[package]
name = "color"
version = "0.2.18"
authors = ["Skylor R Schermer <skyschermer@gmail.com>"]
edition = "2018"
license = "MIT or Apache-2.0"
# maintenance = { status = "experiemental" }

[lib]
name = "color"

[features]
default = ["parse"]
parse = []

# Required dependencies
[dependencies]
tracing = { version = "0.1" }

# Optional dependencies
serde = { version = "1.0", features=["derive"], optional = true }


# Dependencies used for tests, examples, and benches.
[dev-dependencies]


# The development profile, used for `cargo build`
[profile.dev]
opt-level = 0
debug = false # Disabled to speed up compilation; not being used much.
rpath = false
lto = false
debug-assertions = true
incremental = true
overflow-checks = true

# Development profile overrides, ensure dependent crates run fast.
[profile.dev.package."*"]
opt-level = 3
debug-assertions = false
codegen-units = 1


# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = true
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = true


